tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/AbstractErrorReportingTests#AbstractErrorReportingTests(String[]).mjava
	public AbstractErrorReportingTests(String[] fileNames) {
		this.fileNames = fileNames;
	}

